Fix firefox alignment issue in the skills section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -693,3 +693,15 @@ small {
     background-position-x: 30%;
   }
 }
+
+.software-icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.software-icon p {
+  margin-top: 5px;
+  font-size: 0.9rem;
+}
